--- a/Lab_Clinic.csproj
+++ b/Lab_Clinic.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Entitie\Medico.cs" />
     <Compile Include="Entitie\Paciente.cs" />
     <Compile Include="Entitie\PedidoDeExame.cs" />
+    <Compile Include="Entitie\TipodeRequisicao.cs" />
     <Compile Include="Entitie\UF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
