--- a/Lab_Clinic.csproj
+++ b/Lab_Clinic.csproj
@@ -45,13 +45,14 @@
   <ItemGroup>
     <Compile Include="Entitie\Cidade.cs" />
     <Compile Include="Entitie\Convenio.cs" />
+    <Compile Include="Entitie\CRM.cs" />
     <Compile Include="Entitie\Exame.cs" />
     <Compile Include="Entitie\ExamePedidoExame.cs" />
     <Compile Include="Entitie\Grupo Exame.cs" />
     <Compile Include="Entitie\Medico.cs" />
     <Compile Include="Entitie\Paciente.cs" />
     <Compile Include="Entitie\PedidoDeExame.cs" />
-    <Compile Include="Entitie\TipodeRequisicao.cs" />
+    <Compile Include="Entitie\TipoDeRequisicao1.cs" />
     <Compile Include="Entitie\UF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
